fix logout icon

--- a/website/templates/main/home.html.twig
+++ b/website/templates/main/home.html.twig
@@ -18,10 +18,11 @@
                     <button type="button" class="m-4 btn btn-danger confirm-modal-link"
                         data-action-message="Do you really want to log-out?"
                         data-action-label="Log-out"
-                        data-action-icon="sign-out"
+                        data-action-icon="sign-out-alt"
                         data-action-level="danger"
                         data-action-url="{{ path('spipu_user_security_logout') }}"
                     >
+                        <i class="fa fa-sign-out-alt"></i>
                         Logout
                     </button><br />
                 </div>
